--- a/canvas.html
+++ b/canvas.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <canvas id="myCanvas"></canvas>
+    <canvas id="myCanvas" width="2000" height="2000"></canvas>
     <script>
         const canvas = document.getElementById("myCanvas");
         const ctx = canvas.getContext("2d");
