--- a/canvasPixel.html
+++ b/canvasPixel.html
@@ -20,14 +20,13 @@
             image-rendering: pixelated;
             height: 100vh;
         }
-
     </style>
 </head>
 
 <body>
 
-        <canvas></canvas>
-  
+    <canvas></canvas>
+
     <script>
         const canvasSize = 100;
         const canvas = document.getElementsByTagName("canvas")[0];
@@ -35,9 +34,9 @@
         canvas.height = canvasSize;
         const ctx = canvas.getContext("2d");
         let imageData = ctx.getImageData(0, 0, canvasSize, canvasSize);
-        document.getElementById('numbersDiv').style.gridTemplateColumns = `repeat(${canvasSize}, 1fr)`;
 
-        
+
+
         function updateImage(index, newValue) {
             imageData.data[index] = newValue;
             ctx.putImageData(imageData, 0, 0);
@@ -51,7 +50,6 @@
             imageData.data[index + 2] = b === undefined ? 0 : b;
             imageData.data[index + 3] = a === undefined ? 255 : a;
             ctx.putImageData(imageData, 0, 0);
-            showNumbers();
         }
 
         function range(fromInclusive, toExclusive) {
@@ -66,6 +64,17 @@
         }
 
 
+        function drawLine(x1, y1, x2, y2) {
+            const deltaY = (y2 - y1) / (x2 - x1);
+            let yFloat = y1;
+            for (x of range(x1, x2 + 1)) {
+                const y = Math.floor(yFloat);
+                drawPixel(x, y, 0, 200, 200);
+                yFloat += deltaY;
+            }
+        }
+
+// http://members.chello.at/easyfilter/canvas.html
     </script>
 </body>
 
