--- a/labyrint.html
+++ b/labyrint.html
@@ -10,6 +10,9 @@
 <body>
     <canvas id="myCanvas"></canvas>
     <script src="labyrinth.js"></script>
+    <script>
+        init(3);
+    </script>
 </body>
 
 </html>
